--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.6.5",
     "firebase": "^9.3.0",
     "vue": "^3.0.0",
+    "vue-pdf": "^4.3.0",
     "vue-router": "^4.0.0-0",
     "vue3-autocounter": "^1.0.6"
   },
