--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "easy-circular-progress": "^1.0.4",
     "firebase": "^9.3.0",
     "notiwind": "^1.2.4",
     "vue": "^3.0.0",
@@ -19,7 +20,9 @@
     "vue-cookieconsent-component": "^1.2.0",
     "vue-pdf": "^4.3.0",
     "vue-router": "^4.0.0-0",
-    "vue3-autocounter": "^1.0.6"
+    "vue2-circle-progress": "^1.2.3",
+    "vue3-autocounter": "^1.0.6",
+    "vue3-circle-progress": "^1.0.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
