--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "alpine-teleport": "^1.0.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "easy-circular-progress": "^1.0.4",
     "firebase": "^9.3.0",
+    "gitart-vue-dialog": "^1.2.3",
     "notiwind": "^1.2.4",
     "vue": "^3.0.0",
     "vue-cookie-accept-decline": "^5.4.0",
     "vue-cookie-law": "^1.13.3",
     "vue-cookieconsent-component": "^1.2.0",
+    "vue-ios-alertview": "^1.1.2",
+    "vue-modaltor": "^1.5.4",
     "vue-pdf": "^4.3.0",
     "vue-router": "^4.0.0-0",
     "vue2-circle-progress": "^1.2.3",
